# ChangeLog for net-im/kopete-otr
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/kopete-otr/ChangeLog,v 1.10 2007/06/27 08:48:06 drizzt Exp $

*kopete-otr-0.5 (27 Jun 2007)

  27 Jun 2007; Timothy Redaelli <drizzt@gentoo.org>
  -files/kopete-otr-0.2-as-needed.patch, -kopete-otr-0.2.ebuild,
  -kopete-otr-0.3.ebuild, -kopete-otr-0.4.ebuild, +kopete-otr-0.5.ebuild:
  Version bump wrt bug #183373.
  Thanks to Michael Zanetti for reporting.
  Remove old versions.

*kopete-otr-0.4 (23 May 2007)

  23 May 2007; Timothy Redaelli <drizzt@gentoo.org> +kopete-otr-0.4.ebuild:
  Version bump, thanks to Michael Zanetti for reporting wrt #179484.

  04 May 2007; Jeroen Roovers <jer@gentoo.org> kopete-otr-0.3.ebuild:
  Marked ~hppa (bug #176926).

  02 May 2007; Gustavo Zacarias <gustavoz@gentoo.org> kopete-otr-0.2.ebuild,
  kopete-otr-0.3.ebuild:
  Keyworded ~sparc wrt #176371

  02 May 2007; Raúl Porcel <armin76@gentoo.org> kopete-otr-0.3.ebuild:
  Add ~ia64 wrt ~176731

*kopete-otr-0.3 (02 May 2007)

  02 May 2007; Timothy Redaelli <drizzt@gentoo.org> +kopete-otr-0.3.ebuild:
  Version bump wrt bug #176785.
  Thanks to Alan Jones for reporting.

  02 May 2007; Markus Rothe <corsair@gentoo.org> kopete-otr-0.2.ebuild:
  Added ~ppc64; bug #176731

  28 Apr 2007; Timothy Redaelli <drizzt@gentoo.org> kopete-otr-0.2.ebuild:
  Add ~amd64 keyword.

  27 Apr 2007; Timothy Redaelli <drizzt@gentoo.org> metadata.xml:
  Fix metadata.xml

*kopete-otr-0.2 (27 Apr 2007)

  27 Apr 2007; Timothy Redaelli <drizzt@gentoo.org>
  +files/kopete-otr-0.2-as-needed.patch, +metadata.xml,
  +kopete-otr-0.2.ebuild:
  New ebuild, thanks to Michael Zanetti (upstream) for the ebuild wrt #171954.
  Add my patch for --as-needed
