@@ -2,14 +2,19 @@
 Hash: SHA1
 
 DIST kopete-otr-0.5.tar.bz2 788901 RMD160 3782f11003e6a4a25626140d611d941f6c0c522f SHA1 1d4158847c360136c0285b56d6993457dfeafe1b SHA256 b27e15dd4bdd984a8ab739f096a7701703ab330753881660171449b37f8b3251
+DIST kopete-otr-0.6.tar.bz2 801515 RMD160 2026e0406cbd4cf2509d01f1052b52440c3617c9 SHA1 aa727a8443f060721c33bbc1430e9d2b01b9ef74 SHA256 6cb518f7a9cd8bba850fcef0749d577126e1d4937794bdabca718ea8945187f4
 EBUILD kopete-otr-0.5.ebuild 725 RMD160 661cec141a58400ae0024e0ed875fe4fe49503ff SHA1 745cf084382bf3a33696cab6ca818628769fa26c SHA256 8f43be1015b4a05d5c39a14e0fc1cfa8ea43cb5631a3d59567bbf0882816255e
 MD5 5a7f390595d5e64c4939cd8e2fb85992 kopete-otr-0.5.ebuild 725
 RMD160 661cec141a58400ae0024e0ed875fe4fe49503ff kopete-otr-0.5.ebuild 725
 SHA256 8f43be1015b4a05d5c39a14e0fc1cfa8ea43cb5631a3d59567bbf0882816255e kopete-otr-0.5.ebuild 725
-MISC ChangeLog 1777 RMD160 01ca6d58a59087b14bbfdae24a20fdf462260e06 SHA1 951da3e9d07fd7dc7a68e2146ea3f29c41420caa SHA256 5c740499b7021c6e85d10c54e904d031dfc97b2c808d358e32596eac23fbe381
-MD5 7991f33e398102a15e54c0a22a4c1a0c ChangeLog 1777
-RMD160 01ca6d58a59087b14bbfdae24a20fdf462260e06 ChangeLog 1777
-SHA256 5c740499b7021c6e85d10c54e904d031dfc97b2c808d358e32596eac23fbe381 ChangeLog 1777
+EBUILD kopete-otr-0.6.ebuild 725 RMD160 6f5c2aad2662e6d2bd96ebeed54ebd2ba84ab083 SHA1 704ada8cc2406885cb50c86fece72832eb809dfb SHA256 e3108f5301d91ea1ca0859cdf4bdb49ad97551d4f760f3b7229929180b908c4c
+MD5 3a3abb6e0b1a2b1d81931ca51022e73e kopete-otr-0.6.ebuild 725
+RMD160 6f5c2aad2662e6d2bd96ebeed54ebd2ba84ab083 kopete-otr-0.6.ebuild 725
+SHA256 e3108f5301d91ea1ca0859cdf4bdb49ad97551d4f760f3b7229929180b908c4c kopete-otr-0.6.ebuild 725
+MISC ChangeLog 1917 RMD160 084140c68a580321f9c862accaa90c33b6641226 SHA1 bae12c8fabd59341517681d8df21ac331c3dd3e0 SHA256 419a8f25774afc850b851b800d9c4a93f85ac50b13f0396cf98234f63eca26d9
+MD5 83e6d80ac161ec4e7ea8f0d5e0302eed ChangeLog 1917
+RMD160 084140c68a580321f9c862accaa90c33b6641226 ChangeLog 1917
+SHA256 419a8f25774afc850b851b800d9c4a93f85ac50b13f0396cf98234f63eca26d9 ChangeLog 1917
 MISC metadata.xml 222 RMD160 c0fe8198bb72a6bed198a1dd7005ed607711db2a SHA1 a3b2631fffe918fa2b814a269297dfc9e6c355cb SHA256 35319607d0186f4c2b026c636392c56bafa68c71a17a67364e5c530156eb22b4
 MD5 99cf1c24b27d2fe42b99b95fadff0290 metadata.xml 222
 RMD160 c0fe8198bb72a6bed198a1dd7005ed607711db2a metadata.xml 222
@@ -17,10 +22,13 @@ SHA256 35319607d0186f4c2b026c636392c56bafa68c71a17a67364e5c530156eb22b4 metadata
 MD5 b554a8af2be8ecb003dfdacc4bcf8e8b files/digest-kopete-otr-0.5 247
 RMD160 c968e356eecbda4ed99a8edaa72880f6d6d2cbd3 files/digest-kopete-otr-0.5 247
 SHA256 d6cbb2ac98144f0b4be1739da69b7815d5ffebec8510168beb09b94cdac6d99a files/digest-kopete-otr-0.5 247
+MD5 7b401b2dcd07c4f0fc6a8a248cb25271 files/digest-kopete-otr-0.6 247
+RMD160 11438b50a2d25ac2bcdfdbfda23206e02780769c files/digest-kopete-otr-0.6 247
+SHA256 7c8f32769e8921e9976d3bac5c43db3fdb83d867588455e0755e380db1d9a0dd files/digest-kopete-otr-0.6 247
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.4 (GNU/Linux)
+Version: GnuPG v2.0.6 (GNU/Linux)
 
-iD8DBQFGgiRMjJyKLBkBVroRApZnAJ9w6GZ7u9S9HZxBAfsf800JSZhDWQCeI+Fs
-EM1GZN7f8yDtl2Qy9bGy7ng=
-=SHSK
+iD8DBQFG5ZWzjJyKLBkBVroRAnJ6AKCb08M/vVPESTauKGHVAIWtY2IdeQCbB0x4
+ZVqTQfP43LcWqDAkiO0Xb9U=
+=bI8r
 -----END PGP SIGNATURE-----
