@@ -1,0 +1,3 @@
+MD5 659d0c2ffdc33c3b4fb676029f40f0a7 kopete-otr-0.6.tar.bz2 801515
+RMD160 2026e0406cbd4cf2509d01f1052b52440c3617c9 kopete-otr-0.6.tar.bz2 801515
+SHA256 6cb518f7a9cd8bba850fcef0749d577126e1d4937794bdabca718ea8945187f4 kopete-otr-0.6.tar.bz2 801515
