@@ -1,6 +1,11 @@
 # ChangeLog for net-im/kopete-otr
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/kopete-otr/ChangeLog,v 1.10 2007/06/27 08:48:06 drizzt Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/kopete-otr/ChangeLog,v 1.11 2007/09/10 19:06:21 drizzt Exp $
+
+*kopete-otr-0.6 (10 Sep 2007)
+
+  10 Sep 2007; Timothy Redaelli <drizzt@gentoo.org> +kopete-otr-0.6.ebuild:
+  Version bump wrt bug #191971.
 
 *kopete-otr-0.5 (27 Jun 2007)
 
